--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صيد البحر - SeaCatch</title>
+    <title>حجزي - Hajzi</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <script>
@@ -14,18 +15,18 @@
               sans: ['Cairo', 'sans-serif'],
             },
             colors: {
-              sea: {
-                50: '#f0f9ff',
-                100: '#e0f2fe',
-                200: '#bae6fd',
-                300: '#7dd3fc',
-                400: '#38bdf8',
-                500: '#0ea5e9',
-                600: '#0284c7',
-                700: '#0369a1',
-                800: '#075985',
-                900: '#0c4a6e',
-                950: '#082f49',
+              primary: {
+                50: '#eef2ff',
+                100: '#e0e7ff',
+                200: '#c7d2fe',
+                300: '#a5b4fc',
+                400: '#818cf8',
+                500: '#6366f1',
+                600: '#4f46e5',
+                700: '#4338ca',
+                800: '#3730a3',
+                900: '#312e81',
+                950: '#1e1b4b',
               }
             },
             animation: {
@@ -58,11 +59,11 @@
         background: #f1f1f1; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #0ea5e9; 
+        background: #6366f1; 
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #0284c7; 
+        background: #4f46e5; 
       }
     </style>
 <script type="importmap">
@@ -79,7 +80,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-800 min-h-screen">
+  <body class="bg-gray-50 text-gray-800 min-h-screen">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
