--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     "firebase/": "https://esm.sh/firebase@^12.8.0/",
     "@heroicons/react/": "https://esm.sh/@heroicons/react@^2.2.0/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0"
   }
 }
 </script>
